# bizket

./: .gitignore  CITATION.cff  LICENSE  README.md  bot.py  callbacks.py  client.lua  close_emulators.py  cluster.py  clut_exploration.ipynb  config_a2c.json  config_best.json  config_dqn.json  config_ppo.json  emulator_grid.py  enjoy.py  enjoy_config.ini  img_performance.ipynb  main.py  make_config.py  mmx4_env.py  notes.txt  num_mmx4_env.py  num_server.py  optimization.py  optimization_analysis.ipynb  pyproject.toml  requirements.txt  rl.py  server.py  unused.lua  visualizer.py
ini_templates/: enjoy.ini  training.ini
models_configs/: .gitignore  best_model.yml  example.yml  ppo_opt.yml  sevs.yml  z0_opt.yml  z1_opt.yml  zero.yml  zero_zoo_cr.yml  zoo.yml
states/: .gitignore  eregion.State
