[tool.poetry]
name = "bizket"
version = "0.1.0"
description = "Python-Lua Socket implementation for BizHawk emulator"
authors = ["Victor Severo <victor.severo.miranda@gmail.com>"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp38-cp38-win_amd64.whl" }
stable-baselines3 = { git = "https://github.com/carlosluis/stable-baselines3", rev = "fix_tests", extras = ["extra"] }
pygetwindow = "^0.0.9"
torch-tb-profiler = "^0.4.0"
optuna = "^3.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
ipykernel = "^6.16.1"
notebook = "^6.5.1"
ipywidgets = "^8.0.2"
jupyter = "^1.0.0"
seaborn = "^0.12.1"
snakeviz = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
